[project]
name = "ttvision"
version = "0.1.0"
description = "Analyze and edit table tennis matches from video recordings."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "albumentations==2.0.8",
    "lightning==2.3.3",
    "numpy==1.24.4",
    "opencv-contrib-python==4.11.0.86",
    "pandas==2.0.3",
    "pillow==12.1.1",
    "pywinstyles==1.8 ; sys_platform == 'win32'",
    "scikit-learn==1.8.0",
    "segmentation-models-pytorch==0.3.3",
    "setuptools>=68,<81",
    "shapely==2.1.2",
    "sv-ttk==2.6.1",
    "torch==2.4.1",
]
